Fix new message on small devices

--- a/src/app/private/css/messages.component.css
+++ b/src/app/private/css/messages.component.css
@@ -23,3 +23,7 @@
 .card-body.new {
   background-color: var(--color-menu-clear);
 }
+
+.mobile-textarea {
+  height: 90px;
+}
